--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -4,3 +4,20 @@ header, nav, main {
 }
 
 /* NAVIGATION STUFF GOES HERE  */
+
+#myButton {
+    display: none;
+}
+
+ul.menuLinks li a {
+    padding: .4rem 1rem;
+}
+
+ul.menuLinks, ul.menuLinks.open {
+    display: flex;
+    justify-content: flex-end;
+}
+
+ul.menuLinks a:hover {
+    background-color: $secondaryColor;
+}
