--- a/css/styles.css
+++ b/css/styles.css
@@ -343,14 +343,14 @@ nav {
   background-color: #1d295f;
 }
 
-#mybutton::before {
+#myButton::before {
   content: "☰";
 }
 
 #myButton {
   border: none;
   background: none;
-  color: rgb(255, 255, 255);
+  color: white;
   font-size: 2rem;
   padding: 0;
   width: 44px;
@@ -359,24 +359,23 @@ nav {
   cursor: pointer;
 }
 
-ul.menulinks {
+ul.menuLinks {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: none;
 }
-
-li a {
+ul.menuLinks li a {
   color: #fff;
   display: block;
   padding: 0.75rem 10px;
   text-decoration: none;
 }
-
-li.active a {
+ul.menuLinks li.active a {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+/* CSS for the open class*/
 ul.open.menuLinks {
   display: block;
 }
