--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -108,27 +108,41 @@ main {
 
 
 .allcards {
+    padding: 0 $gutter;
     section{
-        border: 1px solid red;
+        border: 1px solid #3990c3;
         border-radius: 10px;
         overflow: hidden;
+        margin: 1rem 0;
         h2, p, img{
             margin: 0;
             padding: 1rem $gutter;
         }
         h2 {
-            background-color: bisque;
+            color: white;
+            background-color: #7c1d47;
             font-size: 1.5rem;
             
             text-align: center;
         }
         img{
             width: 100%;
-            height: auto;   
+            height: auto; 
+            display: block;  
         }
         img.e2e {padding: 0;}
         p {
             font-style: italic;
+        }
+        a {
+            display: block; 
+            background-color: $primaryColor;
+            padding: .75rem;
+            color: white;
+            text-align: center;
+            margin: 0 3rem 1rem 3rem;
+            border-radius: 8px;
+            text-decoration: none;
         }
     }
 } // end allcards
