--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
-$primaryColor: #1d295f; 
-$secondaryColor: #7c1d47;
-$accentColor: #3990c3;
-$greyColor: #ccc;
+$primaryColor: #276678; 
+$secondaryColor: #A3C9A8;
+$accentColor: #FF6F61;
+$greyColor: #E1E5E4;
 
 $defaultFont:'Spline Sans', sans-serif;
 $lightWeight: 300;
