--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -1,1 +1,9 @@
 /* NAVIGATION STUFF GOES HERE  */
+.allcards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $gutter;
+    section{
+        flex-basis: calc(50% - ($gutter/2))
+    }
+}
