--- a/css/styles.css
+++ b/css/styles.css
@@ -444,13 +444,42 @@ main p {
 }
 
 footer {
-  font-size: 0.85rem;
   padding: 1rem 16px;
+}
+footer section.contact p {
+  font-size: 1.1rem;
+  margin: 0.5rem;
+}
+footer section.contact ion-icon {
+  color: #A3C9A8;
+  padding-right: 5px;
+}
+footer section.social {
+  display: flex;
+  justify-content: center;
+}
+footer section.social a {
+  display: block;
+  border: solid 1px #E1E5E4;
+  font-size: 2rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  color: #E1E5E4;
+  text-decoration: none;
+}
+footer section.social a:hover {
+  background-color: #A3C9A8;
+}
+footer section.location {
+  font-size: 1.5rem;
+}
+footer p.legal {
+  font-size: 0.85rem;
   color: #E1E5E4;
   text-align: center;
   line-height: 150%;
 }
-footer a {
+footer p.legal a {
   color: #E1E5E4;
 }
 
@@ -463,6 +492,11 @@ footer a {
   }
   .allcards section {
     flex-basis: calc(50% - 8px);
+  }
+  footer div {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
   }
 }
 @media only screen and (min-width: 64rem) {
@@ -486,5 +520,9 @@ footer a {
   }
   .allcards section {
     flex-basis: calc(33.3333% - 10.6666666667px);
+  }
+  footer div {
+    display: grid;
+    grid-template-columns: auto auto auto;
   }
 }/*# sourceMappingURL=styles.css.map */
