--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -7,3 +7,10 @@
         flex-basis: calc(50% - ($gutter/2))
     }
 }
+
+footer div {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    
+}
