--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -161,10 +161,46 @@ main {
 
 
 footer {
-    font-size: .85rem;
     padding: 1rem $gutter;
+    section {
+
+    }
+    section.contact{
+        p{font-size: 1.1rem;
+        margin: .5rem;}
+
+        ion-icon{color: $secondaryColor; 
+        padding-right: 5px;
+    }
+    } // end of contact
+
+    section.social{
+        display: flex;
+        justify-content: center;
+        a {
+            display: block;
+            border: solid 1px $greyColor;
+            font-size: 2rem;
+            margin: .5rem;
+            padding: .5rem;
+            color: $greyColor;
+            text-decoration: none;
+            
+        }a:hover
+        {background-color: $secondaryColor;}
+       
+    }
+
+    section.location{
+        font-size: 1.5rem;
+    }//end of location
+
+
+    p.legal{
+    font-size: .85rem;
     color: $greyColor;
     text-align: center;
     line-height: $leading;
     a {color: $greyColor;}
+}
 }// end footer
