--- a/css/styles.css
+++ b/css/styles.css
@@ -455,7 +455,7 @@ footer section.contact p {
   margin: 0.5rem;
 }
 footer section.contact ion-icon {
-  color: #A3C9A8;
+  color: white;
   padding-right: 5px;
 }
 footer section.social {
