--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -175,7 +175,7 @@ footer {
         margin: .5rem;}
         
 
-        ion-icon{color: $secondaryColor; 
+        ion-icon{color: white; 
         padding-right: 5px;
     }
     } // end of contact
