--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -169,7 +169,7 @@ footer {
     section.contact{
         a {
             color: white;
-            
+            text-decoration: none;
         }
         p{font-size: 1.1rem;
         margin: .5rem;}
